// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.models;

option go_package = "infra/unifiedfleet/api/v1/models;ufspb";

import "google/protobuf/timestamp.proto";
import "google/api/resource.proto";
import "google/api/field_behavior.proto";
import "infra/unifiedfleet/api/v1/models/location.proto";
import "infra/unifiedfleet/api/v1/models/peripherals.proto";
import "infra/unifiedfleet/api/v1/models/network.proto";
import "infra/unifiedfleet/api/v1/models/state.proto";

// Machine refers to the devices or bare metal servers
// which serves the tests directly.
//
// Next Tag: 13
message Machine {
    option (google.api.resource) = {
        type: "unified-fleet-system.appspot.com/Machine"
        pattern: "machines/{machine}"
    };
    // A unique name for the machine.
    //   * AssetTag for ChromeOS machine (device)
    //   * Serial number for Chrome machine for now (server) (Ideally it should be assetTag once it’s ready)
    // The format will be machines/asset:XXX or machines/sn:XXX
    string name = 1;
    // serial_number of the machine.
    // for chromeOS machine, user is not allowed to update this field.
    // SSW will update this field.
    string serial_number = 2;

    // Location details of where the machine is placed
    Location location = 3;
    oneof device {
        // Chrome Browser Machine
        ChromeBrowserMachine chrome_browser_machine = 4;
        // Chrome OS Machine. The registration system will subscribe to the HaRT system,
        // and automatically get it using Machine name once a machine gets recorded.
        ChromeOSMachine chromeos_machine = 5 [
                (google.api.field_behavior) = OUTPUT_ONLY];
        // Attached Device. Device data for any USB-attached devices.
        AttachedDevice attached_device = 11;
        // Development board, e.g., Andreiboard
        Devboard devboard = 13;
    };
    // Record the last update timestamp of this machine (In UTC timezone)
    google.protobuf.Timestamp update_time = 6 [
        (google.api.field_behavior) = OUTPUT_ONLY];
    // Record the ACL info of the machine
    string realm = 7;

    // tags user can attach for easy querying/searching
    repeated string tags = 8;

    reserved 9;
    reserved "state";

    // State of the machine
    State resource_state = 10;

    // Asset tag of the machine
    string asset_tag = 12;
}

// ChromeBrowserMachine refers to bare metal servers in Chrome Browser lab
message ChromeBrowserMachine {
    // Descriptive name of Chrome Machine
    string display_name = 1;
    // Should match one of the predefined Chrome Platforms.
    // Refers to ChromePlatform name
    string chrome_platform = 2 [(google.api.resource_reference) = {
        type: "unified-fleet-system.appspot.com/ChromePlatform"
    }];

    reserved 3;
    reserved "nic";

    reserved 10;
    reserved "nics";

    // Interface of its connected devices.
    KVMInterface kvm_interface = 4;
    RPMInterface rpm_interface = 5;

    reserved 6;
    reserved "network_device_interface";

    reserved 7;
    reserved "drac";

    // Usually it's a buganizer bug.
    string deployment_ticket = 8;
    // Can be covered by deployment_ticket
    string description = 9;
    repeated Nic nic_objects = 11;
    Drac drac_object = 12;
}

// ChromeOSMachine refers duts and servers in Chrome OS lab
message ChromeOSMachine {
    // All infos come from the HaRT system.
    // used by referencing device config.
    string reference_board = 1;
    // used by ChromeOS build system.
    string build_target = 2;
    string model = 3;
    // Chromebook, labstation, servo, …
    ChromeOSDeviceType device_type = 4;
    // Used internally, Different boards/models could share the same name.
    string google_code_name = 5;
    // HaRT doesn't guarantee its existence.
    string mac_address = 6;
    // User not allowed to update this field. SSW will update this field.
    string sku = 7 [(google.api.field_behavior) = OUTPUT_ONLY];
    // Phase of the device [PVT, EVT, etc,.] if available.
    string phase = 8;
    // Cost center associated with the asset.
    string cost_center = 9;
    // The manufacturing ID for a given DUT
    // User not allowed to update this field. SSW will update this field.
    string hwid = 10 [(google.api.field_behavior) = OUTPUT_ONLY];
    // GPN stands for Google Part Number, unique identifier for the device
    string gpn = 11;
}

// ChromeOSDeviceType refers to the different types of
// device/machine in the Chrome OS lab
enum ChromeOSDeviceType {
    CHROME_OS_DEVICE_TYPE_UNSPECIFIED = 0;
    DEVICE_CHROMEBOOK = 1;
    DEVICE_LABSTATION = 2;
    DEVICE_SERVO = 3;
}

// AttachedDevice refers to attached devices in the labs.
//
// Next Tag: 5
message AttachedDevice {
  // Manufacturer of the device. E.g. Apple, Samsung.
  string manufacturer = 1;
  // Device type of the device. E.g. iPad, Android phone, Android tablet.
  AttachedDeviceType device_type = 2;
  // Reference board of the device. E.g. goldfish, bravo, GT-I9000
  string build_target = 3;
  // Model of the device aka product in some cases. E.g. Nexus One, GT-I9000
  string model = 4;
}

// AttachedDeviceType refers to the different types of device/machine in the
// lab environment.
//
// Next Tag: 7
enum AttachedDeviceType {
  ATTACHED_DEVICE_TYPE_UNSPECIFIED = 0;
  ATTACHED_DEVICE_TYPE_APPLE_PHONE = 1;
  ATTACHED_DEVICE_TYPE_ANDROID_PHONE = 2;
  ATTACHED_DEVICE_TYPE_APPLE_TABLET = 3;
  ATTACHED_DEVICE_TYPE_ANDROID_TABLET = 4;
  ATTACHED_DEVICE_TYPE_DEVBOARD = 5;
  ATTACHED_DEVICE_TYPE_JETSTREAM = 6;
}

// Devboard refers to development boards for component firmware testing.
//
// Next Tag: 2
message Devboard {
  oneof board {
    Andreiboard andreiboard = 1;
    Icetower icetower = 2;
  }
}

// Andreiboard refers to andreiboard type development boards.
//
// Next Tag: 2
message Andreiboard {
  // Serial for the UltraDebug interface.
  // Can be empty if the devboard does not have UltraDebug.
  string ultradebug_serial = 1;
}

// Icetower refers to icetower type development boards.
//
// Next Tag: 2
message Icetower {
  // Fingerprint module ID.
  string fingerprint_id = 1;
}
